--- a/css/desktop/main.css
+++ b/css/desktop/main.css
@@ -1,60 +1,110 @@
-main, aside{
-  display: inline-block;
-  vertical-align: top;
+body{
+  overflow-x: hidden;
 }
-main{
-  width: calc(100% - 256px);
-  height: 100vh;
-  overflow: auto;
-}
-main.full{
-  width: 100vw;
-}
-main::-webkit-scrollbar{
+body::-webkit-scrollbar{
   width: 15px;
 }
-main::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb{
   border-radius: 8px;
   border: 4px solid transparent;
   background-clip: content-box;
   background-color: rgb(35, 35, 35);
 }
-main::-webkit-scrollbar-thumb:hover{
+body::-webkit-scrollbar-thumb:hover{
   background-color: rgb(30, 30, 30);
 }
 
-h1, p, input, textarea, select{
-  font-family: "press_start_2p";
+header{
+  z-index: 1;
+  position: sticky;
+  top: 0;
+  height: 64px;
+  margin: 8px 8px 0 8px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  background-color: rgb(45, 45, 45);
+  border: 1px solid rgb(25, 25, 25);
+  border-radius: 10px;
+}
+body.no_border > header{
+  border: 0;
+}
+body.no_border_radius > header{
+  border-radius: 0;
+}
+
+header .icon:first-child{
+  border-right: 4px solid rgb(35, 35, 35);
+}
+body.no_border > header .icon:first-child{
+  border-right: 4px solid rgb(40, 40, 40);
+}
+header #icon_trash{
+  padding: 0 83px;
+  border-right: 4px solid rgb(35, 35, 35);
+}
+header .icon:hover{
+  cursor: pointer;
+}
+header .icon > canvas {
+  transition: filter 0.1s linear;
+}
+header .icon:hover > canvas {
+  filter: brightness(3);
+}
+
+header > #title_sub{
+  display: inline-flex;
+  width: calc(100% - 68px);
+  height: 64px;
+  vertical-align: top;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+  font-family: "Verdana";
+  color: rgb(100, 100, 100);
+  font-size: 18px;
+  padding: 4px;
+  box-sizing: border-box;
+}
+
+footer{
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 104px;
+  left: 32px;
+  height: 320px;
+  width: 320px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  border: 1px solid rgb(25, 25, 25);
+  border-radius: 10px;
+}
+body.no_border > footer{
+  border: 0;
+}
+body.no_border_radius > footer{
+  border-radius: 0;
+}
+footer > .icon{
+  transform: scale(2);
+  padding: 48px;
+}
+footer > .icon:hover{
+  cursor: pointer;
+}
+footer > .icon > canvas {
+  transition: filter 0.1s linear;
+}
+footer > .icon:hover > canvas {
+  filter: brightness(3);
 }
 
 .icon{
   display: inline-block;
   font-size: 0;
-  transition: background-color 0.1s linear;
-}
-.icon:hover{
-  cursor: pointer;
-}
-.icon > canvas{
-  transition: filter 0.1s linear;
-}
-.icon:hover > canvas{
-  filter: brightness(3);
-}
-
-.icon.dark_background:hover{
-  background-color: rgb(30, 30, 30);
-}
-.icon.red_background:hover{
-  background-color: rgba(255, 75, 75, 0.6);
-}
-
-.icon.rotate_180 > canvas{
-  transform: rotate(180deg);
-}
-
-@font-face{
-  font-family: "press_start_2p";
-  src: url("../../rsc/font/press_start_2p.woff2");
-  font-display: swap;
 }
