--- a/css/mobile/note.css
+++ b/css/mobile/note.css
@@ -76,6 +76,12 @@ body.no_border_radius .note{
   filter: blur(5px);
 }
 
+.note_main > .icon.fullscreen{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
 .note_fullscreen{
   height: calc(var(--vh) - 16px);
   margin: 8px;
