--- a/css/desktop/main.css
+++ b/css/desktop/main.css
@@ -1,28 +1,8 @@
-body{
-  overflow-x: hidden;
-}
-body::-webkit-scrollbar{
-  width: 15px;
-}
-body::-webkit-scrollbar-thumb{
-  border-radius: 8px;
-  border: 4px solid transparent;
-  background-clip: content-box;
-  background-color: rgb(35, 35, 35);
-}
-body::-webkit-scrollbar-thumb:hover{
-  background-color: rgb(30, 30, 30);
-}
-
 header{
-  z-index: 1;
-  position: sticky;
-  top: 0;
   height: 64px;
-  margin: 8px 8px 0 8px;
-  overflow: hidden;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  margin: 8px;
   box-sizing: border-box;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   background-color: rgb(45, 45, 45);
   border: 1px solid rgb(25, 25, 25);
   border-radius: 10px;
@@ -70,17 +50,40 @@ header > #title_sub{
   box-sizing: border-box;
 }
 
+main{
+  height: calc(100vh - 64px - 16px);
+  overflow: auto;
+}
+main.half_full{
+  height: calc(100vh - 64px - 16px - 16px);
+  margin: 16px 8px 8px 8px;
+  box-sizing: border-box;
+}
+main::-webkit-scrollbar{
+  width: 15px;
+}
+main::-webkit-scrollbar-thumb{
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: rgb(35, 35, 35);
+}
+main::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(30, 30, 30);
+}
+
 footer{
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 104px;
-  left: 32px;
-  height: 320px;
-  width: 320px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  bottom: 64px;
+  right: 64px;
+  height: 196px;
+  width: 196px;
+  background-color: rgba(45, 45, 45, 0.8);
   box-sizing: border-box;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   border: 1px solid rgb(25, 25, 25);
   border-radius: 10px;
 }
@@ -92,7 +95,7 @@ body.no_border_radius > footer{
 }
 footer > .icon{
   transform: scale(2);
-  padding: 48px;
+  padding: 16px;
 }
 footer > .icon:hover{
   cursor: pointer;
