--- a/css/desktop/settings.css
+++ b/css/desktop/settings.css
@@ -1,5 +1,13 @@
 #settings{
-  margin: 0 8px 0 8px;
+  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+  border: 1px solid rgb(25, 25, 25);
+  border-radius: 10px;
+}
+body.no_border > #settings{
+  border: 0;
+}
+body.no_border_radius > #settings{
+  border-radius: 0;
 }
 
 #settings .icon{
