--- a/css/mobile/main.css
+++ b/css/mobile/main.css
@@ -1,29 +1,22 @@
 header{
-  margin: 8px 0 8px 8px;
-  overflow: hidden;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  margin: 8px;
   box-sizing: border-box;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   border: 1px solid rgb(25, 25, 25);
   border-radius: 10px;
 }
-@media (orientation: portrait) {header{
-  width: calc(100vw - 16px);
-  height: 64px;
-}}
-@media (orientation: landscape) {header{
-  display: inline-block;
-  width: 64px;
-  height: calc(var(--vh) - 16px);
-  vertical-align: top;
-}}
 body.no_border > header{
   border: 0;
 }
 body.no_border_radius > header{
   border-radius: 0;
 }
-
 @media (orientation: portrait) {
+  header{
+    width: calc(100vw - 16px);
+    height: 64px;
+  }
+
   header .icon:first-child{
     border-right: 4px solid rgb(35, 35, 35);
   }
@@ -33,8 +26,32 @@ body.no_border_radius > header{
   header #icon_trash{
     padding: 0 0 0 calc(100% - 132px);
   }
+
+  header > #title_sub{
+    display: inline-flex;
+    width: calc(100% - 68px);
+    height: 64px;
+    vertical-align: top;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    user-select: none;
+    font-family: "Verdana";
+    color: rgb(100, 100, 100);
+    font-size: 18px;
+    padding: 4px;
+    box-sizing: border-box;
+  }
 }
 @media (orientation: landscape) {
+  header{
+    display: inline-block;
+    width: 64px;
+    height: calc(var(--vh) - 16px);
+    vertical-align: top;
+  }
+
   header .icon:first-child{
     padding: calc((var(--vh) / 2) - 8px - 32px) 0;
   }
@@ -49,46 +66,40 @@ body.no_border_radius > header{
   header #icon_trash{
     padding: calc(var(--vh) - 148px) 0 0 0;
   }
-}
 
-@media (orientation: portrait) {header > #title_sub{
-  display: inline-flex;
-  width: calc(100% - 68px);
-  height: 64px;
-  vertical-align: top;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-  font-family: "Verdana";
-  color: rgb(100, 100, 100);
-  font-size: 18px;
-  padding: 4px;
-  box-sizing: border-box;
-}}
-@media (orientation: landscape) {header > #title_sub{
-  display: none;
-}}
+  header > #title_sub{
+    display: none;
+  }
+}
 
 main{
   overflow: auto;
 }
-@media (orientation: portrait) {main{
-  height: calc(var(--vh) - 16px - 64px - 64px - 16px);
-}}
-@media (orientation: landscape) {main{
-  display: inline-block;
-  width: calc(100vw - 16px - 64px - 64px - 16px);
-  height: calc(var(--vh) - 16px);
-  margin: 8px;
-  vertical-align: top;
-}}
-@media (orientation: portrait) {main.half_full{
-  height: calc(var(--vh) - 16px - 64px);
-}}
-@media (orientation: landscape) {main.half_full{
-  width: calc(100vw - 16px - 64px - 8px);
-}}
+main.half_full{
+  box-sizing: border-box;
+}
+@media (orientation: portrait) {
+  main{
+    height: calc(var(--vh) - 16px - 64px - 64px - 16px);
+  }
+  main.half_full{
+    height: calc(var(--vh) - 16px - 64px - 16px);
+    margin: 16px 8px 8px 8px;
+  }
+}
+@media (orientation: landscape) {
+  main{
+    display: inline-block;
+    width: calc(100vw - 16px - 64px - 64px - 16px);
+    height: calc(var(--vh) - 16px);
+    margin: 8px 8px 8px 0;
+    vertical-align: top;
+  }
+  main.half_full{
+    width: calc(100vw - 16px - 64px - 16px);
+    margin: 8px;
+  }
+}
 
 footer{
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
