--- a/css/mobile/settings.css
+++ b/css/mobile/settings.css
@@ -1,3 +1,15 @@
+#settings{
+  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+  border: 1px solid rgb(25, 25, 25);
+  border-radius: 10px;
+}
+body.no_border > #settings{
+  border: 0;
+}
+body.no_border_radius > #settings{
+  border-radius: 0;
+}
+
 #settings .icon{
   width: 96px;
   text-align: center;
@@ -73,12 +85,6 @@
 }
 .settings_section_element.red .settings_section_element_description{
   color: rgb(255, 115, 115);
-}
-
-.settings_section_element_icon{
-  width: 96px;
-  text-align: center;
-  font-size: 0;
 }
 
 .settings_option{
